--- a/study/css/basic.css
+++ b/study/css/basic.css
@@ -2,6 +2,23 @@
     padding: 0;
     margin: 0;
 }
+body{
+    background-color: #f3f5f7;
+    height: 3000px;
+}
+/* 清除浮动 */
+.clearfix:before,.clearfix::after{
+    content: "";
+    display: table;
+}
+.clearfix::after{
+    clear: both;
+}
+.clearfix{
+    *zoom: 1;
+}
+
+/* 版心 */
 .ceneterwidth{
     width: 1200px;
     margin: 0 auto;
@@ -150,7 +167,7 @@
     background-color: #ffffff;
     height: 60px;
     margin-top: 8px;
-    border-bottom: 1px solid gray;
+    box-shadow: 0px 2px 1px 0px rgba(234, 233, 240, 0.8);
 }
 .jingpintuijian .tujian{
     display: block;
@@ -161,11 +178,17 @@
     font-size:16px;
     color:#6bbfff;
 }
-.jingpintuijian li{
+.jingpintuijian ul{
     float: left;
-    list-style: none;
-    height: 13px;
-    padding: 24px 35px 24px 15px;
+    margin-top: 20px;
+}
+.jingpintuijian li{
+  float: left;
+  list-style: none;
+}
+
+.jingpintuijian li a{
+    padding: 0px 35px;
     border-left: 1px solid gray;
 }
 .jingpintuijian  li a:hover{
@@ -183,5 +206,83 @@
     float: right;
     text-align: center;
     font-size: 14px;
-    padding-right: 14px;
+    margin-right: 30px;
+}
+/* 精品推荐 */
+.ceneterwidth .info{
+    margin-top: 38px;
+}
+.ceneterwidth .info h4,.ceneterwidth .biancheng h4{
+   float: left;
+   font-size: 20px;
+   font-weight: 300;
+   color: #494949;
+}
+.ceneterwidth .info>a,.ceneterwidth .biancheng>a{
+    float: right;
+    margin-right: 30px;
+    color: #a5a5a5;
+    font-size: 12px;
+ }
+ .photo{
+     float: left;
+     width: 1225px;
+     margin-top: 22px;
+ }
+ .photo li{
+     background-color: #fff;
+     list-style: none;
+     float: left;
+     width: 227px;
+     height: 271px;
+     margin: 0 16px 14px 0;
+ }
+ .photo img{
+     width: 100%;
+ }
+ .photo .detail{
+     margin-top: -5px;
+     padding: 25px 20px 30px 25px;
+ }
+ .detail h4{
+     font-weight: 400;
+     font-size: 14px;
+ }
+ .detail p{
+     font-size: 12px;
+     margin-top: 20px;
+ }
+ .detail span{
+     color: #ffb798;
+ }
+ .biancheng{
+     margin-top: 40px;
+ }
+ .biancheng ul{
+     list-style: none;
+     float: left;
+     margin-left: 355px;
+ }
+ .biancheng ul li{
+     float: left;
+     width: 102px;
+ }
+ .biancheng ul li a {
+     font-size: 16px;
+     color: #b6b7b8; 
+ }
+ .biancheng ul li a:hover{
+    color: #00a4ff; 
+}
+
+/* 编程入门详情 */
+.biancheng_content{
+    width: 228px;
+    height:392px;
+    float: left;
+
+}
+.content_right{
+    width: 959px;
+    float: right;
 }
