--- a/shopping/css/common.css
+++ b/shopping/css/common.css
@@ -1,5 +1,3 @@
-
-
 @font-face {
     font-family: 'icomoon';
     src:  url('../fonts/icomoon.eot?4cs1cj');
@@ -12,47 +10,281 @@
     font-display: block;
   }
 
-.center{
+.wrapper{
+    position: relative;
     width:1200px;
     margin: 0 auto;
-}
-.nav{
-    width: 100%;
     height: 30px;
-    background: #f1f1f1;
 }
-.nav .center div{
-    margin-top: 5px;
-}
+
 .fl{
     float: left;
 }
 .fr{
     float: right;
 }
+
 .color-red{
-    color:red;
+    color: red;
+}
+.shortcut{
+    width: 100%;
+    height: 30px;
+    background: #f1f1f1;
+    line-height: 30px;
 }
 
-.menu li{
-   padding: 0px 15px;
-}
-.menu li{
+.shortcut .menulist li{
     float: left;
-    margin-top: 5px;
-    border-right: 1px solid #666;
+}
+
+.shortcut .menulist li:nth-child(even){
+    width: 1px;
+    height: 14px;
+    background: #666;
+    margin: 8px 15px;
+}
+
+.icon-down::after{
+    content: '\e903';
+    font-family:'icomoon';
+    font-size: 14px;
+    margin-left: 3px;
+}
+
+/* 制作头部 */
+.header{
+    position: relative;
+    height: 106px;
+}
+.header .logo{
+    position: absolute;
+    top: 27px;
+    width: 175px;
+    height: 61px;
+}
+.header .logo a{
+    display: inline-block;
+    width: 175px;
+    height: 61px;
+    background: url(../images/logo.png) no-repeat;
+    text-indent: -9999px;
+    overflow: hidden;
+}
+
+.search{
+    position: absolute;
+    top: 27px;
+    left: 347px;
+    width: 538px;
+    height: 36px;
+    border:2px solid #b1191a;
+}
+.input-search{
+    float: left;
+    width: 454px;
+    height: 30px;
+    text-indent: 1em;
+}
+.search button{
+    float: left;
+    width: 80px;
+    height:32px;
+    background: #b1191a;
+    color: #f1f1f1;
+}
+
+.hotwords{
+    position: absolute;
+    top:40px;
+}
+.hotwords a{
+    padding: 8px 11px;
+}
+.shopbar{
+    position: absolute;
+    top: 27px;
+    left: 997px;
+    width: 140px;
+    height: 36px;
+    line-height: 36px;
+    text-align: center;
+    border: 1px solid #dfdfdf;
+    background: #f7f7f7;
+}
+.shopbar::before{
+    position: absolute;
+    left: 20px;
+    content: '\e93a';
+    font-family: 'icomoon';
+    color: #b1191a;
+}
+.shopbar::after{
+    position: absolute;
+    right: 9px;
+    content: '\e905';
+    font-family: 'icomoon'; 
+}
+
+.shop-num{
+    position: absolute;
+    top: -7px;
+    padding: 0 7px;
+    line-height: 14px;
+    border-radius: 7px 7px 7px 0;
+    background: #b1191a;
+    color: white;
+}
+
+/* nav导航 */
+.nav{
+    height: 48px;
+    border-bottom: 2px solid #b1191a;
     position: relative;
 }
-.menu li:last-child{
-    border-right: 0;
-    padding-right: 15px;
+.dropdown dt{ 
+    width: 210px;
+    height: 46px;
+    line-height: 46px;
+    text-align: center;
+    background: #b1191a;
+    font-size: 16px;
+    color:#fff;
 }
-.menu .icon-e903{
-    padding-right: 30px;
+.dropdown  dd{
+    display: none;
 }
-.icon-e903::after{
-    content: '\e903';
+
+.dropdown:hover .subnav{
+    display: block;
+}
+
+.dropdown .subnav{
+    width: 210px;
+    height: 466px;
+    background: #c81623;
+}
+
+.dropdown .subnav li{
+    position: relative;
+    width: 100%;
+    height: 31px;
+    line-height: 31px;
+    color: #fff;
+    padding-left: 8px;
+    margin-left: 2px;
+}
+
+.dropdown .subnav li a{
+    color: #fff;
+    font-size: 14px;
+}
+
+.dropdown .subnav li:hover {
+    background: #fff;
+    color: #c81623;
+}
+.dropdown .subnav li:hover a{
+    color: #c81623;
+}
+
+.dropdown .subnav li::after{
     position: absolute;
-    right: 15px;
-    font-family:'icomoon';
+    right: 8px;
+    content: '\e905';
+    font-family: 'icomoon';
+}
+
+.right-nav{
+    position: absolute;
+    top: 12px;
+    left: 208px;
+    font-size: 16px;
+}
+.right-nav li{
+    float: left;
+}
+
+.right-nav li a{
+    padding: 16px 24px;
+    color: #000;
+}
+
+
+/* footer */
+.footer{
+    width: 100%;
+    height: 417px;
+    background: #f5f5f5;
+}
+
+.shop-service{
+    height: 110px;
+    border-bottom:1px solid #ededed;
+    padding-left: 36px;
+}
+
+.shop-service li{
+    float: left;
+    width:230px;
+    height: 100%;
+    padding-top: 30px;
+}
+
+.shop-service li:first-child{
+    width: 240px;
+}
+
+
+.zhengpin,.wuliu{
+    width: 50px;
+    height: 50px;
+    float: left;
+}
+.zhengpin{
+    background: url(../images/icons.png) no-repeat -255px -5px;
+}
+.wuliu{
+    background: url(../images/icons.png) no-repeat -255px -55px;
+}
+.desc{
+    margin-left: 56px;
+    vertical-align: middle;
+    padding-top: 6px;
+}
+
+.main-service{
+    height: 188px;
+    border-bottom:1px solid #ededed;
+    padding-top: 22px;
+    padding-left: 50px;
+}
+
+
+.service{
+    float: left;
+    width: 200px;
+    height: 188px;
+}
+
+.main-service dl:last-child{
+    width: 150px;
+    text-align: center;
+}
+.service dt{
+    font-size: 16px;
+    font-weight: bolder;
+    padding-bottom: 10px;
+}
+
+.copyright{
+    padding-top: 20px;
+    text-align: center;
+}
+
+.copyright a{
+    padding:0 8px;
+}
+.copyright p{
+    margin-top: 18px;
 }
