--- a/shopping/css/common.css
+++ b/shopping/css/common.css
@@ -14,7 +14,6 @@
     position: relative;
     width:1200px;
     margin: 0 auto;
-    height: 30px;
 }
 
 .fl{
@@ -151,13 +150,6 @@
     font-size: 16px;
     color:#fff;
 }
-.dropdown  dd{
-    display: none;
-}
-
-.dropdown:hover .subnav{
-    display: block;
-}
 
 .dropdown .subnav{
     width: 210px;
@@ -264,12 +256,13 @@
 .service{
     float: left;
     width: 200px;
-    height: 188px;
+    height: 160px;
 }
 
 .main-service dl:last-child{
     width: 150px;
     text-align: center;
+    margin-left: -50px;
 }
 .service dt{
     font-size: 16px;
